--- a/presentations.html
+++ b/presentations.html
@@ -100,6 +100,7 @@
 
 <p><span class="style10">Presentations &nbsp;&nbsp;&nbsp; <a href="./index.html">[home]</a> 
 </span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
+<hr style="width:100%;text-align:left;margin-left:0">
 
 
 <p><span class="style11">&bull; Cluster Resource Scheduling - Academic and Industrial Experience. Invited Talk, 13th Feb., 2019, Newcastle University upon Tyne, Newcastle, UK </span> &nbsp;</p>
@@ -126,25 +127,25 @@
 
 <p><span class="style11">&bull; Modern Resource Management Technique and Overview. Tutorials, 20th October,2015, Alibaba Group, Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&bull; Improving Utilization through Dynamic VM Resource Allocation in Hybrid Cloud Environment. <a href="talks/20141217_ICPADS.pdf"> [slides] </a>  IEEE ICPADS 2014, 17th December, 2014, Hsinchu, Taiwan </span> &nbsp;</p>
+<p><span class="style11">&bull; Improving Utilization through Dynamic VM Resource Allocation in Hybrid Cloud Environment. IEEE ICPADS 2014, 17th December, 2014, Hsinchu, Taiwan </span> &nbsp;</p>
 
-<p><span class="style11">&bull; Introduction to R and Big Data Analysis for System Profiling <a href=""> [slides] </a>  Technical Seminar, 30th October, 2014, Alibaba Cloud Computing Inc., Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Introduction to R and Big Data Analysis for System Profiling. Technical Seminar, 30th October, 2014, Alibaba Cloud Computing Inc., Beijing, China </span> &nbsp;</p>
 
 <p><span class="style11">&bull;  Cluster Tracelog Analysis and Implications. Invited Talk, August, 2014, MSRA, Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&bull; Computing at Scale: System Architectural Evolution and Introduction to Fuxi <a href="talks/20140819_Tsinghua.pdf">[slides]</a>   Invited Talk, 19th August, 2014, Department of Computing, Tsinghua University, Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Computing at Scale: System Architectural Evolution and Introduction to Fuxi.   Invited Talk, 19th August, 2014, Department of Computing, Tsinghua University, Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&bull; Architectural Evolution and Challenges of Resource Management System at Scale and Its Scheduler Simulator <a href="talks/20140806_SysArch.pdf">[slides]</a>  iVCE All-Hands Meeting(iVCE-AHM), 6th August, 2014, Taobao City, Hangzhou, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Architectural Evolution and Challenges of Resource Management System at Scale and Its Scheduler Simulator. iVCE All-Hands Meeting(iVCE-AHM), 6th August, 2014, Taobao City, Hangzhou, China </span> &nbsp;</p>
 
-<p><span class="style11">&bull; Architectural Evolution for Data Processing and Resource Management at Scale <a href="talks/20140606_dataProcessingEvolution.pdf"></a> CCF-Forum (Internet Software: Opportunities and Challenges), 6th June, 2014, NUDT, Changsha, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Architectural Evolution for Data Processing and Resource Management at Scale. CCF-Forum (Internet Software: Opportunities and Challenges), 6th June, 2014, NUDT, Changsha, China </span> &nbsp;</p>
 
-<p><span class="style11">&bull; Survey and Case Study: Cluster Tracelog Analysis and Approaches <a href="talks/cloudcom2013-discussion.pdf"></a> Technical Seminar, 20th April, 2014, Alibaba Cloud Computing Inc., Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Survey and Case Study: Cluster Tracelog Analysis and Approaches. Technical Seminar, 20th April, 2014, Alibaba Cloud Computing Inc., Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&bull; An Analysis of Performance Interference Effects on Energy-Efficiency of Virtualized Cloud Environments <a href="talks/cloudcom2013-discussion.pdf">[slides]</a>  IEEE CloudCom 2013, 2nd December,2013, Bristol, UK </span> &nbsp;</p>
+<p><span class="style11">&bull; An Analysis of Performance Interference Effects on Energy-Efficiency of Virtualized Cloud Environments. IEEE CloudCom 2013, 2nd December,2013, Bristol, UK </span> &nbsp;</p>
 
-<p><span class="style11">&bull; CloudAP: Improving the QoS of Mobile Applications with Efficient VM Migration<a href="talks/20131115_HPCC_Renyu_Yang_CloudAP.pdf">[slides]</a>  IEEE HPCC 2013, 15th November,2013,Zhangjiajie,China </span> &nbsp;</p>
+<p><span class="style11">&bull; CloudAP: Improving the QoS of Mobile Applications with Efficient VM Migration. IEEE HPCC 2013, 15th November,2013,Zhangjiajie,China </span> &nbsp;</p>
 
-<p><span class="style11">&bull; An Analysis of Performance Interference Effects on Energy-Efficiency and VM placement in Virtualized Cloud Environments <a href="talks/20131016_iVCE_ATC_Renyu_Yang_Beihang.pdf">[slides] </a> iVCE All-Hands Meeting(iVCE-AHM), 16th October,2013,Changsha,China </span> &nbsp;</p>
+<p><span class="style11">&bull; An Analysis of Performance Interference Effects on Energy-Efficiency and VM placement in Virtualized Cloud Environments. iVCE All-Hands Meeting(iVCE-AHM), 16th October,2013,Changsha,China </span> &nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
 <p lang="en-US"><span class="incline"> Updated by Dec. 2020 </span> &nbsp; &nbsp;</p>
