--- a/publications_topics.html
+++ b/publications_topics.html
@@ -101,6 +101,8 @@
 	<a href="./publications_topics.html">[topics]</a>
 	<a href="./publications.html">[years] </a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
+<hr style="width:100%;text-align:left;margin-left:0">
+
 <p lang="en-US"><span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
 <p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me.  '= equal contribution  </span> &nbsp; &nbsp;</p>
 
