--- a/services.html
+++ b/services.html
@@ -96,6 +96,9 @@
 </div>
 
 <p><span class="Bolder">Services <a href="./index.html">[home]</a></span></p>
+<hr style="width:100%;text-align:left;margin-left:0">
+
+
 <p><span class="style11"><strong> (Co-) Chair:</strong></span></p>
 <p><span class="style11">&nbsp; IEEE International Conference on Joint Cloud Computing (JCC), 2020 </span></p>
 <p><span class="style11">&nbsp; IEEE JCC 2019 (in conjuction with IEEE SOSE 2019)</span></p>
