--- a/index.html
+++ b/index.html
@@ -179,6 +179,27 @@
 &nbsp;
 </div>
 
+
+<center>
+<p><span class="STYLE17">
+<a href="#div_news">[News]</a> 
+<a href="#div_bio">[Short Bio]</a> 
+<a href="#div_interest">[Research Interests]</a>
+<a href="#div_exp">[Experience]</a> 
+<a href="#div_pub">[Publications]</a>
+<a href="#div_team">[Research Team]</a>
+<a href="#div_grants">[Research Grants]</a>
+<a href="#div_teaching">[Teaching and Presentations]</a>
+<a href="#div_services">[Professional Services]</a>
+<a href="#div_misc">[Misc]</a>
+
+</span></p> 
+</center>
+
+<hr style="width:100%;text-align:left;margin-left:0">
+
+
+<div id="div_bio">
 <p class="Bolder">What's New </p>
 
 <p><span class="style11">(19/10/2020) Will serve as PC member of International Joint Conferences on Artificial Intelligence 2021 (IJCAI'21). 
@@ -197,9 +218,13 @@
 <p><span class="style11">(10/10/2019) A recent survey study on the management of development lifecycle for ML-Based IoT Applications <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a>  </span></p>
 
 <p><span class="style11">~$ No news is good news...Check more previous events in <a href="news.html">old events</a>. </span></p>
+</div>
 
 
-<p class="Bolder">Short Bio &nbsp;</p>
+
+<div id="div_bio">
+
+<p class="Bolder">Short Bio</p> 
 <p><span class="style11"> I am currently a research fellow, funded by a UK EPSRC grant, with the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. I was a research scientist at <a href="http://www.edgetic.com">Edgetic Ltd.</a>, a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
 I have been leading several China/UK national and international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
 1) scalable and intelligent resource scheduling at Internet scale; 
@@ -212,16 +237,20 @@ I has published more than 40 peer-reviewed papers, in the field of distributed s
 <p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
 </span></p>
 
+</div>
 
 
+<div id="div_interest">
 
 <p><span class="Bolder">Research Interests </span></p>
 <p><span class="style11">Massive-scale distributed systems of big data, cloud computing and IoT </span></p>
 <p><span class="style11">&bull; Play distributed systems to improve the efficiency and reliability for adapting to ever-changing environments: resource management, resource scheduling, fault tolerance, dependability etc. </span></p>
 <p><span class="style11">&bull; Play with data: system profiling, log analysis and applied deep/machine learning (e.g., GNN) </span></p>
+</div>
 
 
-<p><span class="Bolder">Education </span></p>
+<div id="div_exp">
+<p><span class="Bolder">Education</span></p>
 
 <p><span class="style11">&bull;  2007.9 - 2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Dr. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
@@ -240,8 +269,12 @@ I has published more than 40 peer-reviewed papers, in the field of distributed s
 <p><span class="style11">&bull; 2017.3 - 2018.3: &nbsp;&nbsp; Research Scientist and Project Director, Big Data and Brain Computing Research Center (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
  
 <p><span class="style11">&bull; 2018.3 - 2020.8: &nbsp;&nbsp; Research Scientist, Edgetic Ltd., UK &nbsp;&nbsp;</span></p>
- 
+</div>
 
+<hr style="width:100%;text-align:left;margin-left:0">
+
+
+<div id="div_pub">
 
 <p><span class="Bolder">Selected Publications &nbsp; </span></p>
 
@@ -277,6 +310,9 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en">[Googe Scholar]</a>
 </span></p> 
 
+</div>
+
+<div id="div_grants">
 
 <p><span class="Bolder">Selected Research Grants </span></p>
 
@@ -292,17 +328,21 @@ I have the opportunity to work closely with many institutes around the world and
 
 <p><span class="style11">&bull; BODEN TYPE Data Centre ONE Project (European Comission’s Horizon 2020 Programme), Member, 2018.6 - 2019.12 </span></p>
 
-<p><span class="style11">&bull; Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  executive leader and coordinator, 2016.6 - 2018.5 </span></p>
+<p><span class="style11">&bull; Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  co-author, project leader/coordinator, 2016.6 - 2018.5 </span></p>
 
-<p><span class="style11">&bull; Storage Model and Mechanism for Joint Clouds (No. 2016YFB1000103), supported by National Key Research and Development Programme, executive leader and coordinator, 2016.5 - 2017.11  </span></p>
+<p><span class="style11">&bull; Storage Model and Mechanism for Joint Clouds (No. 2016YFB1000103), supported by National Key Research and Development Programme, co-author, project leader/coordinator, 2016.5 - 2017.11  </span></p>
 
-<p><span class="style11">&bull; On-demand Resource Aggregation and Execution in Massive-scale iVCE Environments (No.2011CB302602), supported by China 973 Fundamental  Research and Development Programme,  executive leader and coordinator, 2012.1 - 2015.9 </span></p>
+<p><span class="style11">&bull; On-demand Resource Aggregation and Execution in Massive-scale iVCE Environments (No.2011CB302602), supported by China 973 Fundamental  Research and Development Programme, co-author, project leader/coordinator, 2012.1 - 2015.9 </span></p>
 
 <p><span class="style11">&bull; ChinaCloud Phase II: Fundmental Key Software for Cloud Platforms (No.2013AA01A213), supported by National 863 Hi-Tech Research and Development Programme, Key Member, 2013.1 - 2014.1 </span></p>
 
 <p><span class="style11">&bull; ChinaCloud Phase I: Resource Virtualization and Scheduling (No. 2011AA01A202),  supported by National 863 Hi-Tech Research and Development Programme, Key Member, 2011.9 - 2013.12 </span></p> 
 
 <p><span class="style11">&bull; Nature Science Foundation of China (91118008, 90818028, 6117029 4)</span></p>
+
+</div>
+
+<div id="div_team">
 
 
 <p><span class="Bolder">Research Team </span></p>
@@ -345,6 +385,13 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="style11">&bull; Jin Ouyang, Jiamang Wang (senior staff engineer at Alibaba Group), etc. </span></p>
 
+</div>
+
+
+<hr style="width:100%;text-align:left;margin-left:0">
+
+<div id="div_teaching">
+
 <p><span class="Bolder">Teaching and Presentations </span></p>
  
 <p><span class="style11">&bull; Cloud Computing (CS61839, Graduate Level, Beihang University), Spring 2017 (together with Prof. Chunming Hu et. al)</span></p> 
@@ -353,6 +400,10 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="style11">&bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html">~$ talks</a> </span></p>
 
+</div>
+
+
+<div id="div_services">
 <p><span class="Bolder">Selected Professional Services </span></p>
 
 <p><span class="style11">&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC) 2020, 2019, etc. </span></p>
@@ -375,13 +426,35 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull;  <strong>Excellent Academic Award</strong> of The Institute of Advanced Computing Technology, Beihang University
 </span></p> 
 <p><span class="style11">&bull;   <strong>Excellence Student Scholarship</strong> of Beihang University</span></p>
+</div>
 
 
-
+<div id="div_misc">
 <p><span class="Bolder">Misc </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
-<p><span class="style11">  Outside of work, I really enjoy traditional chinese calligraphy, architectural design, cooking world wide foods, music and long-distance running.
+<p><span class="style11"> Outside of work, I really enjoy traditional chinese calligraphy, architectural design, cooking world wide foods, music and long-distance running.
 </span></p>
- 
+</div>
+
+<hr style="width:100%;text-align:left;margin-left:0">
+
+
+<center>
+<p><span class="STYLE17">
+<a href="#div_news">[News]</a> 
+<a href="#div_bio">[Short Bio]</a> 
+<a href="#div_interest">[Research Interests]</a>
+<a href="#div_exp">[Experience]</a> 
+<a href="#div_pub">[Publications]</a>
+<a href="#div_team">[Research Team]</a>
+<a href="#div_grants">[Research Grants]</a>
+<a href="#div_teaching">[Teaching and Presentations]</a>
+<a href="#div_services">[Professional Services]</a>
+<a href="#div_misc">[Misc]</a>
+
+</span></p> 
+</center>
+
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
 <p><span class="style11">  updated by Dec. 2020 </span></p>
 
