--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
 <center>
 <p><span class="STYLE17">
 <a href="#div_news">[News]</a> 
-<a href="#div_bio">[Short Bio]</a> 
-<a href="#div_interest">[Research Interests]</a>
+<a href="#div_bio">[Bio]</a> 
+<a href="#div_interest">[Research Interest]</a>
 <a href="#div_exp">[Experience]</a> 
 <a href="#div_pub">[Publications]</a>
-<a href="#div_team">[Research Team]</a>
+<a href="#div_team">[Team]</a>
 <a href="#div_grants">[Research Grants]</a>
 <a href="#div_teaching">[Teaching and Presentations]</a>
 <a href="#div_services">[Professional Services]</a>
@@ -441,11 +441,11 @@ I have been collaborating closely with many brilliant researchers around the wor
 <center>
 <p><span class="STYLE17">
 <a href="#div_news">[News]</a> 
-<a href="#div_bio">[Short Bio]</a> 
-<a href="#div_interest">[Research Interests]</a>
+<a href="#div_bio">[Bio]</a> 
+<a href="#div_interest">[Research Interest]</a>
 <a href="#div_exp">[Experience]</a> 
 <a href="#div_pub">[Publications]</a>
-<a href="#div_team">[Research Team]</a>
+<a href="#div_team">[Team]</a>
 <a href="#div_grants">[Research Grants]</a>
 <a href="#div_teaching">[Teaching and Presentations]</a>
 <a href="#div_services">[Professional Services]</a>
@@ -453,6 +453,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 </span></p> 
 </center>
+
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
