--- a/index.html
+++ b/index.html
@@ -199,10 +199,12 @@
 <hr style="width:100%;text-align:left;margin-left:0">
 
 
-<div id="div_bio">
+<div id="div_news">
 <p class="Bolder">What's New </p>
 
-<p><span class="style11">(19/10/2020) Will serve as PC member of International Joint Conferences on Artificial Intelligence 2021 (IJCAI'21). 
+<p><span class="style11">(17/01/2021) Our work on streaming social event detection is accepted by ACM Transactions on Knowledge Discovery from Data (TKDD). </span></p>
+
+<p><span class="style11">(19/10/2020) I will serve as PC member of International Joint Conferences on Artificial Intelligence 2021 (IJCAI'21). 
 </span></p>
 
 
@@ -228,13 +230,13 @@
 <p><span class="style11"> I am currently a research fellow, funded by a UK EPSRC grant, with the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. I was a research scientist at <a href="http://www.edgetic.com">Edgetic Ltd.</a>, a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
 I have been leading several China/UK national and international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
 1) scalable and intelligent resource scheduling at Internet scale; 
-2) system dependability by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
+2) system dependability by leveraging effective system failover, long-tail task mitigation, and quantitative reliability modeling etc.; 
 3) improved system utility for resource management through resource over-subscription mechanism and multi-objective optimization, etc.; 
-and 4) geo-distributed data processing, etc. 
-I has published more than 40 peer-reviewed papers, in the field of distributed systems, cloud computing and big data analytics, which appear in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of my work won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participation and contribution to the reliable resource management and scheduling at massive scale.  
+and 4) applied machine/deep learning for representation learning, anomaly detection, etc. 
+I has published more than 40 peer-reviewed papers, in the field of distributed systems, cloud computing and big data analytics. They appear in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), ACM Transactions on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of my work won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participation and contribution to the reliable resource management and scheduling at massive scale.  
 </span></p>
 
-<p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
+<p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I co-founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group in COLAB. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
 </span></p>
 
 </div>
@@ -279,7 +281,6 @@ I has published more than 40 peer-reviewed papers, in the field of distributed s
 <p><span class="Bolder">Selected Publications &nbsp; </span></p>
 
 <p><span class="style11">
-Highlight: TPDS(2), TKDE(1), TSC(2), VLDB(1), ICDCS(1), DSN(1), LISA(1), SoCC(1), CSUR(1), etc. </span></p>
 
 <p><span class="style11">&bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. <a href="paper/tpds2020-rose.pdf">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 </span></p>
 
@@ -289,6 +290,9 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <p><span class="style11">&bull; P.Garraghan, X.Ouyang, R.Yang*, D.Mckee and J.Xu. <a href="paper/tsc2016b.pdf">Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters</a>. IEEE Trans. on Services Computing (TSC), 2019   </span></p>
 
 <p><span class="style11">&bull;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. <a href="paper/tsc2016.pdf">Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover</a>. IEEE Trans. on Services Computing (TSC), 2017</span></p>
+
+<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu and L.He. <a href="paper/tkdd2021.pdf"> Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks</a>.  ACM Trans. on Knowledge Discovery from Data (TKDD), 2021 
+</span></p>
 
 <p><span class="style11">&bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091"> Software-Defined Fog Orchestration for IoT Services</a>. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1, 2020</span></p>
 
