--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
 <div id="div_news">
 <p class="Bolder">What's New </p>
 
+<p><span class="style11">(31/01/2021) Our work on resource efficient incremental learning for heterogenous information networks is accepted by IEEE Trans. on Computers (TC). </span></p>
+
 <p><span class="style11">(17/01/2021) Our work on streaming social event detection is accepted by ACM Transactions on Knowledge Discovery from Data (TKDD). </span></p>
 
 <p><span class="style11">(19/10/2020) I will serve as PC member of International Joint Conferences on Artificial Intelligence 2021 (IJCAI'21). 
@@ -233,8 +235,10 @@ I have been leading several China/UK national and international projects in term
 2) system dependability by leveraging effective system failover, long-tail task mitigation, and quantitative reliability modeling etc.; 
 3) improved system utility for resource management through resource over-subscription mechanism and multi-objective optimization, etc.; 
 and 4) applied machine/deep learning for representation learning, anomaly detection, etc. 
-I has published more than 40 peer-reviewed papers, in the field of distributed systems, cloud computing and big data analytics. They appear in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), ACM Transactions on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of my work won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participation and contribution to the reliable resource management and scheduling at massive scale.  
 </span></p>
+
+<p><span class="style11">  I has published more than 40 peer-reviewed papers, in the field of distributed systems, cloud computing, big data analytics and applied deep learning techniques. They appear in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Computers (TC), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), ACM Transactions on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of my work won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participation and contribution to the reliable resource management and scheduling at massive scale.  
+	</span></p>
 
 <p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I co-founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group in COLAB. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
 </span></p>
@@ -284,6 +288,8 @@ I has published more than 40 peer-reviewed papers, in the field of distributed s
 
 <p><span class="style11">&bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. <a href="paper/tpds2020-rose.pdf">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 </span></p>
 
+<p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. <a href="paper/tc2021-lime.pdf">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>.  IEEE Transactions on Computers (TC), 2021 </span></p>
+	
 <p><span class="style11">&bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. <a href="paper/tpds2019-gapar-full.pdf">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
@@ -353,10 +359,10 @@ I have the opportunity to work closely with many institutes around the world and
 
 
 <p><span class="style11"> 
-I have been co-supervising and working closely with many students mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
+I have been co-advising and/or working closely with many students mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
-<p><span class="style11"> ~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.5- , Beihang Uni.), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds), Yiming Hei (2019.9-, Beihang Uni.) </span></p>
+<p><span class="style11">~$  <strong> team -l current </strong> </span></p>
+<p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.5- , Beihang Uni.), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds), Gingfung Yeung (2018.1- , Lancaster University, UK), Yiming Hei (2019.9- , Beihang Uni.) </span></p>
 
 <p><span class="style11">&bull; Undergraduate Final Year Project Students: Chris London, Charlee Boyle, Kunchaya Soinak, Sam Hepburn (Uni. of Leeds, 2020 Autumn) </span></p>
 
