--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&bull; R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. <a href="paper/socc2019-perphon.pdf">Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference</a>. ACM Symposium on Cloud Computing (SoCC), 2019 </span></p>
 
-<p><span class="style11">&bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  <a href="paper/icdcs2018.pdf">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a>. IEEE ICDCS 2018  </span></p>
+<p><span class="style11">&bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  <a href="paper/icdcs2018.pdf">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a>. IEEE ICDCS 2018 and ACM SOSP 2017 (poster)</span></p>
 
 <p><span class="style11">&bull;  Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang and J.Xu. <a href="paper/vldb2014.pdf">Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale</a>. VLDB 2014</span></p>
 
@@ -353,11 +353,11 @@ I have the opportunity to work closely with many institutes around the world and
 I have been co-advising and/or working closely with many students mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.5- , Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Gingfung Yeung (2018.1- , Lancaster University, UK, with Dr. Peter Garraghan), Yiming Hei (2019.9- , Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng) </span></p>
+<p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.5- , Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Gingfung Yeung (2018.1- , Lancaster University, UK, with Dr. Peter Garraghan), Yiming Hei (2019.9- , Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , Beihang Uni., with Prof. Jie Xu and Prof. Tianyu Wo) </span></p>
 
 <p><span class="style11">&bull; Undergraduate Final Year Project Students: Chris London, Charlee Boyle, Kunchaya Soinak, Sam Hepburn (Uni. of Leeds, 2020 Autumn) </span></p>
 
-<p><span class="style11">&bull; MSc Projects: Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (Uni. of Leeds, 2021) </span></p>
+<p><span class="style11">&bull; MSc Projects: Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
 
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
