--- a/publications.html
+++ b/publications.html
@@ -107,7 +107,21 @@
 <p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= equal contribution </span> &nbsp; &nbsp;</p>
 
 
+<p lang="en-US"><span class="red">2021</span></p>
 
+<p><span class="style11"> &bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 
+<a href="paper/tpds2021-horus.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Transactions on Computers (TC), 2021 
+<a href="paper/tc2021.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu, L.He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Transactions on Knowledge Discovery from Data (TKDD), 2021 <a href="paper/tkdd2021.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, J.Li, and P.S.Yu. Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks. arXiv:2104.07886 <a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
+</span></p>
 
 <p lang="en-US"><span class="red">2020</span></p>
 
@@ -116,7 +130,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 <a href="paper/tpds2020-rose.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">  &bull;B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. ACM Computing Surveys (CSUR), 2020 
+<p><span class="style11">  &bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. ACM Computing Surveys (CSUR), 2020 
 <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a><a href="paper/csur2020.pdf">[paper]</a> </span></p>
 
 <p><span class="style11">  &bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. Software-Defined Fog Orchestration for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a>
@@ -149,15 +163,12 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <a href="paper/tpds2019-gapar-full.pdf">[full version]</a> <a href="paper/tpds2019-gapar.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">  &bull;R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), 2019  
+<p><span class="style11">  &bull; R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference. ACM Symposium on Cloud Computing (SoCC), 2019  
 <a href="paper/socc2019-perphon.pdf"> [paper]</a>
 </span></p>
 
 <p><span class="style11">  &bull; H.Peng, J.Li, S.Wang, L.Wang, Q.Gong, R.Yang, B.Li, L.He and P.S.Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf">[paper]</a>
 </span></p> 
-
-<p><span class="style11">  &bull;B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. CoRR abs/1910.05433, 2019  
-<a href="http://arxiv.org/abs/1910.05433">[arxiv]</a> </span></p>
 
 <p><span class="style11">  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-location System. in the 13th IEEE SOSE, 2019 
 <a href="paper/sose2019-shaready.pdf">[paper]</a>
