--- a/publications_topics.html
+++ b/publications_topics.html
@@ -110,9 +110,13 @@
 
 <p lang="en-US"><span class="red"> Distributed System Resource Management: Scheduling and Orchestration </span></p>
 
-<p><span class="style11">&bull; R.Yang, J.Xu. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 (with Honor)  
+
+<p><span class="style11">&bull; R.Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 (with Honor)  
 </span></p>
 
+<p><span class="style11"> &bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 
+<a href="paper/tpds2021-horus.pdf">[paper]</a> 
+</span></p>
 
 <p><span class="style11">&bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. Performance-aware Speculative Resource Oversubscription for Large-scale Clusters, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 
@@ -203,7 +207,17 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 
 
-<p lang="en-US"><span class="red"> Systems for Big Data and ML Applications </span></p>
+<p lang="en-US"><span class="red"> Big Data and Applied Machine Learning</span></p>
+
+<p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Transactions on Computers (TC), 2021 
+<a href="paper/tc2021.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu, L.He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Transactions on Knowledge Discovery from Data (TKDD), 2021 <a href="paper/tkdd2021.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, J.Li, and P.S.Yu. Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks. arXiv:2104.07886 <a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
+</span></p>
 
 <p><span class="style11">&bull; Q.Li, H.Peng, J.Li, C.Xia, R.Yang, L.Sun, P.S.Yu, L.He. A Text Classification Survey: From Shallow to Deep Learning.   CoRR abs/2008.00364, 2020 <a href="https://arxiv.org/abs/2008.00364">[arxiv]</a> 
 </span></p>
