--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
 <div id="div_news">
 <p class="Bolder">What's New </p>
 
+<p><span class="style11">(27/04/2021) One paper on GPU cluster scheduling is accepted by IEEE Trans. on Parallel and Distributed Systems (TPDS).  
+</span></p>
+
 <p><span class="style11">(23/02/2021) I will serve as Track Chair for IEEE International Conference on Cloud Computing (CLOUD'21). See the <a href ="https://conferences.computer.org/cloud/2021/cfp/">Call for Papers</a> 
 </span></p>
 
@@ -276,6 +279,7 @@ and 4) applied machine/deep learning for representation learning, anomaly detect
 
 <p><span class="style11">
 
+<p><span class="style11">&bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. <a href="paper/tpds2021-horus.pdf">Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 </a>
 <p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. <a href="paper/tc2021.pdf">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>.  IEEE Trans. on Computers (TC), 2021 </span></p>
 
 <p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu and L.He. <a href="paper/tkdd2021.pdf"> Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks</a>.  ACM Trans. on Knowledge Discovery from Data (TKDD), 2021 
@@ -357,7 +361,7 @@ I have been co-advising and/or working closely with many students mainly from CO
 
 <p><span class="style11">&bull; Undergraduate Final Year Project Students: Chris London, Charlee Boyle, Kunchaya Soinak, Sam Hepburn (Uni. of Leeds, 2020 Autumn) </span></p>
 
-<p><span class="style11">&bull; MSc Projects: Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
+<p><span class="style11">&bull; MSc Projects: Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo, Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
 
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
