--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 <p><span class="style11">(13/08/2021) Our work on malware detection through Graph Attention Networks is accepted by IEEE Trans. on Neural Networks and Learning Systems (TNNLS). 
 </span></p>
 
-<p><span class="style11">(10/07/2021) I will serve as PC member for AAAI Conference on Artificial Intelligence 2022 (AAAI'22), International Joint Conferences on Artificial Intelligence 2022 (IJCAI'22) and European Conference on Artificial Intelligence (ECAI'22).
+<p><span class="style11">(10/07/2021) I will serve as PC member for International Joint Conferences on Artificial Intelligence 2022 (IJCAI'22) and European Conference on Artificial Intelligence (ECAI'22).
 </span></p>
 
 <p><span class="style11">(20/06/2021) Our work on joint optmization of cache placement and request routing is accepted by Journal of Parallel and Distributed Computing (JPDC).  
@@ -373,12 +373,13 @@ I have been co-advising and/or working closely with many students mainly from CO
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
 <p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.5- , Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Gingfung Yeung (2018.1- , Lancaster University, UK, with Dr. Peter Garraghan), Yiming Hei (2019.9- , Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , Beihang Uni., with Prof. Jie Xu and Prof. Tianyu Wo) </span></p>
-
-<p><span class="style11">&bull; MSc Projects: Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo, Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
+<p><span class="style11">&bull; MSc Students: Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
+<p><span class="style11">&bull; Also closely working with Research Fellows: Dr. Satish Kumar, Dr. Clément Mommessin </span></p>
 
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
 
+<p><span class="style11">&bull; Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (MSc. of COMP5200M, 2020 Autumn, Uni. of Leeds)
 <p><span class="style11">&bull; Chris London (BSc, 2021, Uni. of Leeds, first employment at Permutive UK), Charlee Boyle (BSc, 2021, Uni. of Leeds, first employment at IBM UK), Sam Hepburn (BSc, 2021, Uni. of Leeds, first employment at Knowledge Integration Ltd. UK) </span></p>
 
 <p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, Uni. of Leeds, with Prof. Jie Xu), Xiaochen Sun (2019.9-2020.9, Uni. of Leeds, Visiting PhD. Student from ISCAS, with Prof. Jie Xu) 
@@ -400,10 +401,10 @@ I have been co-advising and/or working closely with many students mainly from CO
 <p><span class="style11">
 I have been collaborating closely with many brilliant researchers around the world. </span></p>
 <p><span class="style11"> ~$  <strong> team -l collaborator </strong> </span></p>
-<p><span class="style11">&bull; Dr. Ismael Solis Moreno (now at IBM Research), <a href="https://esl.lancs.ac.uk/">Dr. Peter Garraghan</a> (now Lecturer at Lancaster University)</span></p>
+<p><span class="style11">&bull; Dr. Ismael Solis Moreno (Data Scientist and Performance Analyst at IBM Research), <a href="https://esl.lancs.ac.uk/">Dr. Peter Garraghan</a> (now Lecturer at Lancaster University)</span></p>
 
 <p><span class="style11">&bull; 	
-<a href="http://www.zhenyu.info/">Dr. Zhenyu Wen</a> (now Postdoc at Newcastle University), Dr. Xue Ouyang (now assistant professor at NUDT), <a href="https://tlin-tao-lin.github.io/">Tao Lin (EPFL)</a></span></p>
+<a href="http://www.zhenyu.info/">Dr. Zhenyu Wen</a> (now Professor at Zhejiang University of Technology), Dr. Xue Ouyang (now assistant professor at NUDT), <a href="https://tlin-tao-lin.github.io/">Tao Lin (EPFL)</a></span></p>
 <p><span class="style11">&bull; Dr. Lei Cui (now associate professor at CAS), <a href="https://penghao-buaa.github.io/">Dr. Hao Peng</a> (now assistant professor at Beihang University) </span></p>
 
 <p><span class="style11">&bull; Jin Ouyang, Jiamang Wang (senior staff engineer at Alibaba Group), etc. </span></p>
@@ -434,7 +435,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull; Area/Track Chair: IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
 
-<p><span class="style11">&bull; PC Member: AAAI'22, IJCAI'21'22, ECAI'22, IEEE CLOUD'21'22, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
+<p><span class="style11">&bull; PC Member: IJCAI'21'22, ECAI'22, IEEE CLOUD'21'22, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
 
 
 <p><span class="style11">&bull; Journal Reviewers: IEEE TPDS, TDSC, TC, TKDE, TSC, TSE, TCC, ACM CSUR, etc. </span></p> 
