--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 <div id="div_news">
 <p class="Bolder">What's New </p>
 
-<p><span class="style11">(13/08/2021) Our work on malware detection through Graph Attention Networks is accepted by IEEE Trans. on Neural Networks and Learning Systems (TNNLS). 
-</span></p>
+<p><span class="style11">(12/09/2021) Our work on lifelong house price prediction and malware detection have been accepted by IEEE Trans. on Knowledge and Data Engineering (TKDE) and IEEE Trans. on Neural Networks and Learning Systems (TNNLS) respectively. 
+</span></p> 
 
 <p><span class="style11">(10/07/2021) I will serve as PC member for International Joint Conferences on Artificial Intelligence 2022 (IJCAI'22) and European Conference on Artificial Intelligence (ECAI'22).
 </span></p>
@@ -299,6 +299,9 @@ and 4) applied machine/deep learning for representation learning, anomaly detect
 
 <p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu and L.He. <a href="paper/tkdd2021.pdf"> Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks</a>.  ACM Trans. on Knowledge Discovery from Data (TKDD), 2021 
 </span></p>
+
+<p><span class="style11">&bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu and L.He. <a href="paper/tkde2021.pdf"> Lifelong Property Price Prediction: A Case Studyfor the Toronto Real Estate Market</a>.  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 
+</span></p> 
 
 <p><span class="style11">&bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. <a href="paper/tpds2020-rose.pdf">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 </span></p>
 
