--- a/publications.html
+++ b/publications.html
@@ -125,6 +125,8 @@
 <p><span class="style11">&bull; Y.Song, T.Wo*, R.Yang*, Q.Shen and J.Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC)  <a href="paper/jpdc2021.pdf">[paper]</a> 
 </span></p>
 
+<p><span class="style11">  &bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu, L.He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021.pdf">[paper]</a> 
+</span></p>
 
 <p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu, L.He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Transactions on Knowledge Discovery from Data (TKDD) <a href="paper/tkdd2021.pdf">[paper]</a> 
 </span></p>
