--- a/publications_topics.html
+++ b/publications_topics.html
@@ -231,7 +231,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; Q.Li, H.Peng, J.Li, C.Xia, R.Yang, L.Sun, P.S.Yu, L.He. A Text Classification Survey: From Shallow to Deep Learning.   CoRR abs/2008.00364, 2020 <a href="https://arxiv.org/abs/2008.00364">[arxiv]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu, L.He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  CoRR abs/2008.05880, 2020 <a href="https://arxiv.org/abs/2008.05880">[arxiv]</a> 
+<p><span class="style11">&bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu, L.He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021.pdf">[paper]</a><a href="https://arxiv.org/abs/2008.05880">[arxiv]</a> 
 </span></p>
 
 <p><span class="style11">&bull; B.Qian, J.Su, Z.Wen, D.N.Jha, Y.Li, Y.Guan, D.Puthal, P.James, R.Yang, A.Zomaya, O.Rana, L.Wang, R.Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. ACM Computing Surveys (CSUR), 2020 
