--- a/publications_topics.html
+++ b/publications_topics.html
@@ -178,7 +178,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 <p lang="en-US"><span class="red"> System Dependability: Reliability and Fault Tolerance </span></p>
 
-<p><span class="style11">&bull; Y.Hei', R.Yang', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021  <a href="paper/tnnls2021.pdf">[paper]</a> 
+<p><span class="style11">&bull; Y.Hei', R.Yang', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021  <a href="paper/tnnls2021-hawk.pdf">[paper]</a> 
 </span></p>
 
 <p><span class="style11">&bull; Y.Song, T.Wo*, R.Yang*, Q.Shen and J.Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC), 2021  <a href="paper/jpdc2021.pdf">[paper]</a> 
