--- a/publications.html
+++ b/publications.html
@@ -109,7 +109,7 @@
 
 <p lang="en-US"><span class="red">2021</span></p>
 
-<p><span class="style11">&bull; Y.Hei', R.Yang', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS)  <a href="paper/tnnls2021.pdf">[paper]</a> 
+<p><span class="style11">&bull; Y.Hei', R.Yang', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS)  <a href="paper/tnnls2021-hawk.pdf">[paper]</a> 
 </span></p>
 
 <p><span class="style11">&bull; J.Zhu', R.Yang', C.Hu, T.Wo, S.Xue, J.Ouyang, J.Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID), <a href="paper/ccgrid2021.pdf">[paper]</a>  </span></p>
