--- a/publications.html
+++ b/publications.html
@@ -225,7 +225,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">  &bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, C.Li. ROSE: Cluster Scheduling through Efficient Resource Overselling, ACM/USENIX SOSP, 2017 (poster) <a href="paper/sosp2017-poster.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">  &bull; R.Yang, T.Wo, Y. Wang, C.Hu and J.Xu. Software-defined Storage in Joint Cloud. Communications of CCF, 2017  (In Chinese) 
+<p><span class="style11">  &bull; T.Wo, R.Yang, Y. Wang, C.Hu and J.Xu. Software-defined Storage in Joint Cloud. Communications of CCF, 2017  (In Chinese) 
 <a href="paper/ccfcomm2017.pdf">[paper]</a>
 </span></p>
 
@@ -300,15 +300,6 @@ A Method for Private Car Transportation Dispatching Based on a Passenger Demand 
 
 <p><span class="style11">  &bull; W.Wang, C.Hu, T.Wo and R.Yang*. YarnPlus: A Yarn Based Framework for Fine-Grained Resource Sharing in Heterogeneous Computing Environments, in the 11th CCF CNCC 2013, <a href="paper/cncc2013.pdf">[paper]</a>
 </span></p>
-
-
-
-
-
-
-
-<p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> Updated by August 2021 </span> &nbsp; &nbsp;</p>
 
 </p>
 </td>
