--- a/publications_topics.html
+++ b/publications_topics.html
@@ -246,7 +246,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; Y.Zhang, M.Zhang, T.Wo, X.Lin, R.Yang, J.Xu. A Scalable lnternet-of-Vehicles Service over Joint Clouds. in the 9th IEEE JCC 2018 <a href="paper/jcc2018.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&bull; R.Yang, T.Wo, Y. Wang, C.Hu and J.Xu. Software-defined Storage in Joint Cloud. Communications of CCF, 2017  (In Chinese) 
+<p><span class="style11">&bull; T.Wo, R.Yang, Y. Wang, C.Hu and J.Xu. Software-defined Storage in Joint Cloud. Communications of CCF, 2017  (In Chinese) 
 <a href="paper/ccfcomm2017.pdf">[paper]</a>
 </span></p>
 
@@ -291,11 +291,6 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">&bull; Y.Zhang, R.Yang, T.Wo, C.Hu, J.Kang , L.Cui. CloudAP: Improving the QoS of Mobile Applications with Efficient VM Migration, in the 15th IEEE HPCC 2013, <a href="paper/hpcc2013.pdf">[paper]</a>
 </span></p>
 
-
-
-
-<p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> Updated by August 2021 </span> &nbsp; &nbsp;</p>
 
 </p>
 </td>
