--- a/index.html
+++ b/index.html
@@ -345,11 +345,15 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
 
-<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1), funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - </span></p> 
+<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1), funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - now </span></p> 
 
-<p><span class="style11">&bull; Server Modelling Capability (No.45904), funded by Innovate UK Programme, UKRI, key member, 2020.2 - 2020.8 </span></p>
+<p><span class="style11">&bull; Server Modelling Capability (No.45904), funded by Innovate UK Programme, UKRI, co-author and key member, 2020.2 - 2020.8 </span></p>
 
-<p><span class="style11">&bull; BODEN TYPE Data Centre ONE Project (European Comission’s Horizon 2020 Programme), Member, 2018.6 - 2019.12 </span></p>
+<p><span class="style11">&bull; BODEN TYPE Data Centre ONE Project (European Comission’s Horizon 2020 Programme), member, 2018.6 - 2019.12 </span></p>
+
+<p><span class="style11">&bull; Pin the Tail: Understanding Straggler Manifestation in Internet-based Distributed Systems (EP/T01461X/1), UK Engineering and Physical Sciences Research Council (EPSRC), member, 2017.9 - 2019.12 </span></p>
+
+
 
 <p><span class="style11">&bull; Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  co-author, project leader/coordinator, 2016.6 - 2018.5 </span></p>
 
@@ -404,7 +408,7 @@ I have been co-advising and/or working closely with many students mainly from CO
 <p><span class="style11">
 I have been collaborating closely with many brilliant researchers around the world. </span></p>
 <p><span class="style11"> ~$  <strong> team -l collaborator </strong> </span></p>
-<p><span class="style11">&bull; Dr. Ismael Solis Moreno (Data Scientist and Performance Analyst at IBM Research), <a href="https://esl.lancs.ac.uk/">Dr. Peter Garraghan</a> (now Lecturer at Lancaster University)</span></p>
+<p><span class="style11">&bull; Dr. Ismael Solis Moreno (Data Scientist and Performance Analyst at IBM Research), <a href="https://esl.lancs.ac.uk/">Dr. Peter Garraghan</a> (now Reader/Professor at Lancaster University UK)</span></p>
 
 <p><span class="style11">&bull; 	
 <a href="http://www.zhenyu.info/">Dr. Zhenyu Wen</a> (now Professor at Zhejiang University of Technology), Dr. Xue Ouyang (now assistant professor at NUDT), <a href="https://tlin-tao-lin.github.io/">Tao Lin (EPFL)</a></span></p>
@@ -432,6 +436,8 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <div id="div_services">
 <p><span class="Bolder">Selected Professional Services </span></p>
+
+<p><span class="style11">&bull; Lead Guest Editor: "Massive-Scale Distributed Systems and Cloud Computing" Special Issue in the Big Data and Cognitive Computing Journal </span></p>
 
 <p><span class="style11">&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC) 2020, 2019, etc. </span></p>
 
