--- a/publications.html
+++ b/publications.html
@@ -109,6 +109,10 @@
 
 <p lang="en-US"><span class="red">2021</span></p>
 
+<p><span class="style11">&bull; T.Li, Z.Hong, Q.Cai, L.Yu, Z.Wen, and R.Yang*. BISSIAM: Bispectrum Siamese Network Based
+Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021-bissiam.pdf">[paper]</a> 
+</span></p>
+
 <p><span class="style11">&bull; Y.Hei', R.Yang', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS)  <a href="paper/tnnls2021-hawk.pdf">[paper]</a> 
 </span></p>
 
@@ -128,10 +132,10 @@
 <p><span class="style11">  &bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu, L.He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu, L.He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Transactions on Knowledge Discovery from Data (TKDD) <a href="paper/tkdd2021.pdf">[paper]</a> 
+<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu, L.He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Trans. on Knowledge Discovery from Data (TKDD) <a href="paper/tkdd2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, J.Li, and P.S.Yu. Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks. arXiv:2104.07886 <a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
+<p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, and P.S.Yu. Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks. ACM Trans. on Information Systems (TOIS) <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
 </span></p>
 
 <p lang="en-US"><span class="red">2020</span></p>
