--- a/index.html
+++ b/index.html
@@ -201,9 +201,12 @@
 
 
 <div id="div_news">
-<p class="Bolder">What's New </p>
+<p class="Bolder">What's New</p>
 
-<p><span class="style11">(12/09/2021) Our work on lifelong house price prediction and malware detection have been accepted by IEEE Trans. on Knowledge and Data Engineering (TKDE) and IEEE Trans. on Neural Networks and Learning Systems (TNNLS) respectively. 
+<p><span class="style11">(01/10/2021) Our work on UAV anomaly detection through contrastive learning and work on RL Guided Multi-Relational Graph Neural Networks have been accepted by IEEE Trans. on Knowledge and Data Engineering (TKDE) and ACM Trans. on Information Systems (TOIS), respectively. 
+</span></p>
+
+<p><span class="style11">(12/09/2021) Our work on lifelong house price prediction and work on malware detection have been accepted by IEEE Trans. on Knowledge and Data Engineering (TKDE) and IEEE Trans. on Neural Networks and Learning Systems (TNNLS) respectively. 
 </span></p> 
 
 <p><span class="style11">(10/07/2021) I will serve as PC member for International Joint Conferences on Artificial Intelligence 2022 (IJCAI'22) and European Conference on Artificial Intelligence (ECAI'22).
@@ -241,7 +244,7 @@ I have been leading several China/UK national and international projects in term
 and 4) applied machine/deep learning for representation learning, anomaly detection, etc. 
 </span></p>
 
-<p><span class="style11">  I has published more than 40 peer-reviewed papers, in the field of distributed systems, cloud computing, big data analytics and applied deep learning techniques. They appear in top journals and conference proceedings such as IEEE Trans. on Parallel and Distributed Systems (TPDS), IEEE Trans. on Computers (TC), IEEE Trans. on Knowledge and Data Engineering (TKDE), IEEE Trans. on Neural Networks and Learning Systems (TNNLS), IEEE Trans. on Services Computing (TSC), ACM Trans. on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of my work won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participation and contribution to the reliable resource management and scheduling at massive scale.  
+<p><span class="style11">  I has published more than 45 peer-reviewed papers, in the field of distributed systems, cloud computing, big data analytics and applied deep learning techniques. They appear in top journals and conference proceedings such as IEEE Trans. on Parallel and Distributed Systems (TPDS), IEEE Trans. on Computers (TC), IEEE Trans. on Knowledge and Data Engineering (TKDE), IEEE Trans. on Neural Networks and Learning Systems (TNNLS), IEEE Trans. on Services Computing (TSC), ACM Trans. on Information Systems (TOIS), ACM Trans. on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of my work won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participation and contribution to the reliable resource management and scheduling at massive scale.  
 	</span></p>
 
 <p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I co-founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group in COLAB. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
@@ -291,17 +294,17 @@ and 4) applied machine/deep learning for representation learning, anomaly detect
 
 <p><span class="style11">
 
+<p><span class="style11">&bull; T.Li, Z.Hong, Q.Cai, L.Yu, Z.Wen, and R.Yang*. <a href="paper/tkde2021-bissiam.pdf">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 </span></p>
+
 <p><span class="style11">&bull; R.Yang', Y.Hei', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. <a href="paper/tnnls2021-hawk.pdf">Hawk: Rapid Android Malware Detection through Heterogeneous Graph Neural Network</a>. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021 </span></p>
 
 <p><span class="style11">&bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. <a href="paper/tpds2021-horus.pdf">Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 </span></p>
 
 <p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. <a href="paper/tc2021.pdf">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>.  IEEE Trans. on Computers (TC), 2021 </span></p>
 
-<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu and L.He. <a href="paper/tkdd2021.pdf"> Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks</a>.  ACM Trans. on Knowledge Discovery from Data (TKDD), 2021 
-</span></p>
+<p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, and P.S.Yu. <a href="paper/tois2021-riognn.pdf">Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks</a>. ACM Trans. on Information Systems (TOIS), 2021  </span></p>
 
-<p><span class="style11">&bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu and L.He. <a href="paper/tkde2021.pdf"> Lifelong Property Price Prediction: A Case Studyfor the Toronto Real Estate Market</a>.  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 
-</span></p> 
+<p><span class="style11">&bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu and L.He. <a href="paper/tkde2021.pdf"> Lifelong Property Price Prediction: A Case Studyfor the Toronto Real Estate Market</a>.  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 </span></p> 
 
 <p><span class="style11">&bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. <a href="paper/tpds2020-rose.pdf">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 </span></p>
 
