--- a/publications_topics.html
+++ b/publications_topics.html
@@ -218,14 +218,18 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 <p lang="en-US"><span class="red"> Big Data and Applied Machine Learning</span></p>
 
+<p><span class="style11">&bull; T.Li, Z.Hong, Q.Cai, L.Yu, Z.Wen, and R.Yang*. BISSIAM: Bispectrum Siamese Network Based
+Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 <a href="paper/tkde2021-bissiam.pdf">[paper]</a> 
+</span></p>
+
 <p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Trans. on Computers (TC), 2021 
 <a href="paper/tc2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu, L.He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Transactions on Knowledge Discovery from Data (TKDD), 2021 <a href="paper/tkdd2021.pdf">[paper]</a> 
+<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu, L.He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Trans. on Knowledge Discovery from Data (TKDD), 2021 <a href="paper/tkdd2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, J.Li, and P.S.Yu. Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks. arXiv:2104.07886 <a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
+<p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, and P.S.Yu. Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks, ACM Trans. on Information Systems (TOIS), 2021 <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
 </span></p>
 
 <p><span class="style11">&bull; Q.Li, H.Peng, J.Li, C.Xia, R.Yang, L.Sun, P.S.Yu, L.He. A Text Classification Survey: From Shallow to Deep Learning.   CoRR abs/2008.00364, 2020 <a href="https://arxiv.org/abs/2008.00364">[arxiv]</a> 
