--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@ and 4) applied machine/deep learning for representation learning, anomaly detect
 
 <p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. <a href="paper/tc2021.pdf">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>.  IEEE Trans. on Computers (TC), 2021 </span></p>
 
-<p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, and P.S.Yu. <a href="paper/tois2021-riognn.pdf">Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks</a>. ACM Trans. on Information Systems (TOIS), 2021  </span></p>
+<p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, and P.S.Yu. <a href="paper/tois2021-riognn.pdf">Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks</a>. ACM Trans. on Information Systems (TOIS), 2021  </span></p>
 
-<p><span class="style11">&bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu and L.He. <a href="paper/tkde2021.pdf"> Lifelong Property Price Prediction: A Case Studyfor the Toronto Real Estate Market</a>.  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 </span></p> 
+<p><span class="style11">&bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu and L.He. <a href="paper/tkde2021.pdf"> Lifelong Property Price Prediction: A Case Study for the Toronto Real Estate Market</a>.  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 </span></p> 
 
 <p><span class="style11">&bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. <a href="paper/tpds2020-rose.pdf">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 </span></p>
 
@@ -443,6 +443,8 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="Bolder">Selected Professional Services </span></p>
 
 <p><span class="style11">&bull; Lead Guest Editor: "Massive-Scale Distributed Systems and Cloud Computing" Special Issue in the Big Data and Cognitive Computing Journal </span></p>
+
+<p><span class="style11">&bull; Review Editor on the Editorial Board of Cybersecurity and Privacy, specialty section of Frontiers in Big Data </span></p>
 
 <p><span class="style11">&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC) 2020, 2019, etc. </span></p>
 
