--- a/publications.html
+++ b/publications.html
@@ -118,7 +118,7 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 
 <p><span class="style11">&bull; J.Zhu', R.Yang', C.Hu, T.Wo, S.Xue, J.Ouyang, J.Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID), <a href="paper/ccgrid2021.pdf">[paper]</a>  </span></p>
 
-<p><span class="style11"> &bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS) 
+<p><span class="style11"> &bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS) 
 <a href="paper/tpds2021-horus.pdf">[paper]</a> 
 </span></p>
 
