--- a/publications_topics.html
+++ b/publications_topics.html
@@ -114,7 +114,7 @@
 <p><span class="style11">&bull; R.Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 (with Honor)  
 </span></p>
 
-<p><span class="style11"> &bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 
+<p><span class="style11"> &bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 
 <a href="paper/tpds2021-horus.pdf">[paper]</a> 
 </span></p>
 
