--- a/services.html
+++ b/services.html
@@ -99,7 +99,9 @@
 <hr style="width:100%;text-align:left;margin-left:0">
 
 
-<p><span class="style11"><strong> (Co-) Chair:</strong></span></p>
+<p><span class="style11"><strong> (Co-) Chair/Editor:</strong></span></p>
+<p><span class="style11">&nbsp; Lead Guest Editor: "Massive-Scale Distributed Systems and Cloud Computing" Special Issue in the Big Data and Cognitive Computing Journal </span></p>
+<p><span class="style11">&nbsp; Review Editor on the Editorial Board of Cybersecurity and Privacy, specialty section of Frontiers in Big Data </span></p>
 <p><span class="style11">&nbsp; IEEE CLOUD 2021, Area Chair </span></p>
 <p><span class="style11">&nbsp; IEEE International Conference on Joint Cloud Computing (JCC), 2019, 2020, PC Co-Chair </span></p>
 <p><span class="style11">&nbsp; IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) PC Co-Chair </span></p>
@@ -108,7 +110,7 @@
 <p><span class="style11">&nbsp;IEEE ESaaSA'14 (in conjuction with IEEE CLOSER 2014)</span></p>
 <p><span class="style11">&nbsp;IEEE IWES'14 (in conjuction with IEEE CloudCom 2014) </span></p>
 <p><span class="style11">&nbsp;IEEE FiCloud'16 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
-<p><span class="style11">&nbsp;IEEE/ACM BDCAT'16-'21  </span></p>
+<p><span class="style11">&nbsp;IEEE/ACM BDCAT'16-'21 </span></p>
 <p><span class="style11">&nbsp;IEEE/ACM UCC'18-'20 </span></p>
 <p><span class="style11">&nbsp;IEEE CLOUD'21-'22' </span></p>
 <p><span class="style11">&nbsp;IJCAI'21-'22, ECAI'22 </span></p>
@@ -118,8 +120,8 @@
 <p><span class="style11">&nbsp;Organizer: IEEE ISORC'12, IEEE iVCE'12, CoLaB Workshop'12-'14</span></p>
 
 <p><span class="style11"><strong> Reviewer: </strong> </span></p>
-<p><span class="style11">&nbsp;IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS,  IEEE ISSRE, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE CCDC, etc. </span></p>
-<p><span class="style11">&nbsp;Journals: IEEE TC, IEEE TPDS, IEEE TDSC, IEEE TKDE, IEEE TSC, IEEE TSE, IEEE TCC, IEEE Trans. on Reliability, IEEE Trans. on Sustainable Computing; ACM Trans. on Intelligent Systems and Technology (TIST); ACM Computing Survey (CSUR); IEEE IoT Journal; IEEE Computer, Journal of Parallel and Distributed Computing (JPDC), etc.
+<p><span class="style11">&nbsp;IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS, IEEE ISSRE, IEEE CloudCom, IEEE ICPADS, etc. </span></p>
+<p><span class="style11">&nbsp;Journals: IEEE TC, IEEE TPDS, IEEE TDSC, IEEE TKDE, IEEE TSC, IEEE TSE, IEEE TCC, IEEE Trans. on Reliability, IEEE TII, IEEE Trans. on Sustainable Computing, ACM TKDD, ACM TIST, ACM Computing Survey (CSUR); IEEE IoT Journal; IEEE Computer, Journal of Parallel and Distributed Computing (JPDC), etc.
 </span></p>
 
 
