fix auto margin error

--- a/publications_topics.html
+++ b/publications_topics.html
@@ -67,6 +67,8 @@
 .STYLE16 {text-align: justify; font-size: 16pt; font-family: Arial,"\6977 \4F53 "; font-style: italic; }
 .STYLE17 {text-align: justify; font-size: 12pt; font-family: Arial,"\6977 \4F53 "; font-weight: bold; }
 -->
+p{ margin:10px auto} 
+
 </style>
 </head>
 
