--- a/index.html
+++ b/index.html
@@ -435,6 +435,8 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, University of Leeds), Autumn 2020 (together with Prof. Jie Xu)</span></p> 
 
+<p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, University of Leeds), Autumn 2021 (together with Prof. Jie Xu)</span></p> 
+
 <p><span class="style11">&bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html">~$ talks</a> </span></p>
 
 </div>
@@ -452,7 +454,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull; Area/Track Chair: IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
 
-<p><span class="style11">&bull; PC Member: IJCAI'21'22, ECAI'22, IEEE CLOUD'21'22, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
+<p><span class="style11">&bull; PC Member: IJCAI'21'22, ECAI'22, IEEE CLOUD'20'21, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
 
 
 <p><span class="style11">&bull; Journal Reviewers: IEEE TPDS, TDSC, TC, TKDE, TSC, TSE, TCC, ACM CSUR, etc. </span></p> 
